Added connection to BrickBreaker DB and Users table, added register page

--- a/BrickBreaker/WebApplication2/BrickBreaker.csproj
+++ b/BrickBreaker/WebApplication2/BrickBreaker.csproj
@@ -38,7 +38,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -64,9 +72,28 @@
     <Content Include="JavaScript\DoubleBrick.js" />
     <Content Include="GamePage.aspx" />
     <Content Include="JavaScript\Main.js" />
+    <Content Include="RegisterPage.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityModel\Entity_Player.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Entity_Player.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EntityModel\Entity_Player.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Entity_Player.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EntityModel\Entity_Player.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Entity_Player.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="EntityModel\User.cs">
+      <DependentUpon>Entity_Player.tt</DependentUpon>
+    </Compile>
     <Compile Include="GamePage.aspx.cs">
       <DependentUpon>GamePage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -82,15 +109,43 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterPage.aspx.cs">
+      <DependentUpon>RegisterPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegisterPage.aspx.designer.cs">
+      <DependentUpon>RegisterPage.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="MasterPage.Master" />
+    <EntityDeploy Include="EntityModel\Entity_Player.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Entity_Player.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="EntityModel\Entity_Player.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Entity_Player.edmx</DependentUpon>
+      <LastGenOutput>Entity_Player.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="EntityModel\Entity_Player.edmx.diagram">
+      <DependentUpon>Entity_Player.edmx</DependentUpon>
+    </Content>
+    <Content Include="EntityModel\Entity_Player.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Entity_Player.edmx</DependentUpon>
+      <LastGenOutput>Entity_Player.cs</LastGenOutput>
+    </Content>
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
